cc: Fix non root copy request visible rect in HighDPI

Before while transform clip into layer space, incorrectly used wrong
helper function and applied device scale twice. Create correct helper
function and add unittest.

BUG=622083
R=ajuma
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2117183002
Cr-Commit-Position: refs/heads/master@{#403782}

Former-commit-id: 296dd9f02b09445ad5976396a86c00ff3181c253